# dream_machine

./: .gitignore  readme.md
1-1-training/: pyproject.toml
bash/: data.txt  gcs.sh  (+11 more)
concept2/: Makefile  c2_workouts_dl.py  concept2_downloader.py  dev.py  generate_report.py  get_pace_over_time_chart.py  launch.sh  main.py  pyproject.toml  requirements.txt  scratchpad.ipynb  summary.html
concept2/archive/: get_pace_over_time_chart.py
concept2/web/: index.html
concept2/workouts/: 2024-05-03_rowerg_workout_87842857.csv  2024-05-05_rowerg_workout_87897730.csv  2024-07-09_rowerg_workout_89836881.csv  2024-07-23_rowerg_workout_90234800.csv  2024-07-30_rowerg_workout_90444618.csv  2024-08-01_rowerg_workout_90514993.csv  2024-08-06_rowerg_workout_90666527.csv  2024-08-08_rowerg_workout_90735374.csv  2024-08-13_rowerg_workout_90880875.csv  2024-08-15_rowerg_workout_90952044.csv  2024-08-20_rowerg_workout_91102869.csv  2024-08-22_rowerg_workout_91171908.csv  2024-08-24_rowerg_workout_91235487.csv  2024-08-27_rowerg_workout_91329679.csv  2024-08-29_rowerg_workout_91403094.csv  2024-09-02_rowerg_workout_91512127.csv  2024-09-04_rowerg_workout_91583489.csv  2024-09-07_rowerg_workout_91682620.csv  2024-09-09_rowerg_workout_91734855.csv  2024-09-16_rowerg_workout_91956800.csv  2024-09-18_rowerg_workout_92034458.csv  2024-09-21_rowerg_workout_92135544.csv  2024-09-23_rowerg_workout_92190264.csv  2024-09-26_rowerg_workout_92308393.csv  2024-10-07_rowerg_workout_92677156.csv  2024-10-10_rowerg_workout_92794450.csv  2024-10-17_rowerg_workout_93032020.csv  2024-10-21_rowerg_workout_93147122.csv  2024-10-24_rowerg_workout_93257508.csv  2024-10-31_rowerg_workout_93502189.csv  2024-11-04_rowerg_workout_93636310.csv  2024-11-07_rowerg_workout_93754787.csv  2024-11-11_rowerg_workout_93883622.csv  2024-11-15_rowerg_workout_94052066.csv  2024-11-19_rowerg_workout_94190252.csv  2024-11-23_rowerg_workout_94353097.csv  2024-11-26_rowerg_workout_94465112.csv  2024-11-30_rowerg_workout_94631697.csv  2024-12-04_rowerg_workout_94824417.csv  2024-12-07_rowerg_workout_94967174.csv  (+65 more)
make_test/: Makefile  Makefile.canonical  README.md  pyproject.toml  scratchpad.ipynb
make_test/src/matts_etl_suite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
make_test/src/unified_duckpolars.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
polars/volume_testing/polars_r/: Cargo.toml
polars/volume_testing/polars_r/src/: main.rs
rust_code/r_data_gen/: Cargo.toml  readme.md  single thread.txt  using tokio.txt
rust_code/r_data_gen/src/: common.rs  main.rs
substack/articles/2026.01.03 - c2_semantic/: Makefile  README.md  blah.txt  cube.js  detail_query.sql  dev.py  docker-compose.yml  launch.sh  main.py  notes.txt  push_to_md.py  push_to_md.sql  pyproject.toml  qa.sh  query_logs.json  refresh_c2_data.sh  scratchpad.ipynb
substack/articles/2026.01.03 - c2_semantic/model/cubes/: c2_cube.yml
substack/articles/2026.01.03 - c2_semantic/web/: README.md  index.html
substack/articles/2026.01.10-md_multi_cloud/: README.md  main.py  notes.txt  pyproject.toml  scratchpad.ipynb
substack/articles/2026.01.10-md_multi_cloud/data/: customer_insights.parquet  orders.parquet
substack/articles/2026.01.10-md_multi_cloud/scripts/: generate_insights.py  generate_orders.py  push_to_clouds.py
substack/articles/2026.01.13-MD_Hybrid/rust-csv-gen/: .gitignore  Cargo.toml  README.md
(+2202 files in other folders)
