[project]
name = "concept2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "duckdb>=1.4.3",
    "fastapi>=0.115.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "requests>=2.32.5",
    "scipy>=1.14.0",
    "uvicorn[standard]>=0.30.0",
]
