[package]
name = "polars_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = "0.5"
chrono = "0.4"
polars-lazy = "0.38.3"
polars = { version = "0.38.3", features = ["lazy", "strings", "regex", "to_dummies","parquet"] }