[project]
name = "2026-01-03-c2-semantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.4.3",
    "requests>=2.32.5",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
]
