[package]
name = "rust_csv_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
fastrand = "2"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
# Optimize for runtime performance
opt-level = 3
lto = "thin"
codegen-units = 1
